# miniprojects

./: .gitignore  LICENSE  README.md
Conway/: .gitignore  Conway.cabal  conway.hs  grid.txt
Conway/app/: conway.hs
Princeton/: README.md  emulator.c  program.txt
Review/: LICENSE  Review.cabal  Server.cabal  test.hs
Review/app/: Main.hs
Review/data/: books.db
Review/static/: home.mustache
Server/: CHANGELOG.md
Server/app/: Main.hs  home.html
algorithms/: determinant.hs  peaks.py  points.py
