cabal-version:      3.0
name:               Conway
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             archiekind
maintainer:         archiekind1@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Conway
    import:           warnings
    main-is:          conway.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      gloss ^>=1.13.2.2
    hs-source-dirs:   app
    default-language: Haskell2010
