cabal-version:      3.0
name:               Review
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             archiekind
maintainer:         archiekind1@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:
data-files: static/*

common warnings
    ghc-options: -Wall

executable Server
    import:           warnings
    main-is:          Main.hs
    other-modules:    Paths_Server
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      warp,
                      wai,
                      http-types,
                      sqlite-simple >=0.4,
                      persistent-sqlite >=2.13,
                      persistent >=2.13
    hs-source-dirs:   app
    default-language: Haskell2010
